# Market-Data-Collection-and-Backtesting-Framework

./: .gitignore  README.md  meson.build
config/database/: database_config.json  database_schema.json
database/src/: database_binance_fetcher.cpp  database_db_helper.cpp  database_downloader.cpp  database_downloader.h  database_pairs_tracker.cpp  meson.build
db/: database.db
lib/: meson.build
lib/src/: meson.build
lib/src/backtest/: backtest.cpp  backtest.h  meson.build
lib/src/data/: data_types.cpp  data_types.h  meson.build
lib/src/database/: database.cpp  database.h  meson.build
lib/src/portfolio/: meson.build  portfolio.cpp  portfolio.h
lib/src/strategy/: meson.build  strategy.h  strategy_high_breakout.h  strategy_simple_mom.h
lib/src/types/: config_data.h  config_handler.h  logger.cpp  logger.h  meson.build  scheduler.h
lib/src/utils/: json_utils.cpp  json_utils.h  meson.build  time_utils.cpp  time_utils.h
signalizer/src/: meson.build  signalizer_configdata.cpp  signalizer_configdata.h  signalizer_main.cpp  signalizer_scheduler.cpp  signalizer_scheduler.h
